# bpf-profile

./: .gitignore  Cargo.toml  README.md
examples/: generate-memo-profile.sh  generate-simple-profile.sh  generate-token-profile.sh  memo.dump  memo.trace  profile_memo.rs  simple-profile.sh  simple.trace  token-profile.sh  token.dump  token.trace
src/: bpf.rs  cli.rs  config.rs  error.rs  filebuf.rs  global.rs  lib.rs  main.rs  resolver.rs  tests.rs  trace.rs
src/calls/: mod.rs
src/trace/: mod.rs
