[package]
name = "bpf-profile"
version = "1.0.0"
authors = ["NeonLabs Maintainers <maintainers@cyber-core.dev>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
maplit = "1.0.2"
regex = "1.5.4"
structopt = { version = "0.3.21", features = ["color"] }
thiserror = "1.0.24"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"

[profile.release]
overflow-checks = true
