[package]
name = "bpf-profile"
version = "1.0.0"
authors = ["NeonLabs Maintainers <maintainers@cyber-core.dev>"]
edition = "2021"

[dependencies]
lazy_static = "1.4"
regex = "1.5"
structopt = { version = "0.3", features = ["color"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
overflow-checks = true
